--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@sendgrid/mail": "^8.1.6",
     "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -35,6 +36,7 @@
     "googleapis": "^164.1.0",
     "mongoose": "^8.19.1",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.6.0",
     "node-mailjet": "^6.0.9",
     "nodemailer": "^7.0.10",
